<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ui.FirstScreenActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_account"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/img_profile"
        app:layout_constraintBottom_toTopOf="@+id/input_name"
        app:layout_constraintEnd_toEndOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/input_palindrome"
        app:layout_constraintEnd_toEndOf="@+id/input_palindrome"
        app:layout_constraintStart_toStartOf="@+id/input_palindrome"
        app:layout_constraintTop_toBottomOf="@+id/img_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_palindrome"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_check"
        app:layout_constraintEnd_toEndOf="@+id/btn_check"
        app:layout_constraintStart_toStartOf="@+id/btn_check"
        app:layout_constraintTop_toBottomOf="@+id/input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/palindrome" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:paddingVertical="12dp"
        android:text="@string/check"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@+id/btn_next"
        app:layout_constraintTop_toBottomOf="@+id/input_palindrome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/next"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />

</androidx.constraintlayout.widget.ConstraintLayout>